--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ google-auth==2.14.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.50.0
+gunicorn==20.1.0
 h5py==3.7.0
 HeapDict==1.0.1
 idna==3.4
